2003-05-21  Sam Steingold  <sds@gnu.org>

	* disassem.lisp (disassemble, disassemble-machine-code): return
	NIL, as per ANSI CL spec

2003-05-21  Sam Steingold  <sds@gnu.org>

	MAKE-INSTANCES-OBSOLETE now does nothing except for issuing a
	warning: there is no point in obsoleting instances if the class
	has not been redefined
	* clos.lisp (ensure-class): incf CLASS-ID here
	(make-instances-obsolete): do not incf CLASS-ID here

2003-05-20  Sam Steingold  <sds@gnu.org>

	even more errors are now recoverable
	* control.d (FUNCTION): use check_funname() and
	check_fdefinition() instead of signalling errors
	(fehler_undef_function): removed
	(SYMBOL-FUNCTION, FDEFINITION): use check_fdefinition()
	instead of fehler_undef_function()
	(check_setq_body): GC-unsafe due to using
	check_symbol_non_constant() instead of test_symbol_non_constant()
	(SET, MAKUNBOUND, MULTIPLE-VALUE-SETQ): use
	check_symbol_non_constant() instead of test_symbol_non_constant()
	(check_varspec): new function
	(make_variable_frame, COMPILER-LET): use it, also use
	check_symbol_non_constant() instead of test_symbol_non_constant()
	(PROGV): progv() is GC-unsafe now
	(PROCLAIM): use check_funname() instead of fehler_kein_symbol()
	* error.d (fehler_kein_symbol): removed
	(check_symbol_non_constant): replaces test_symbol_non_constant()
	(check_symbol_special, check_fdefinition): new functions
	(check_function): replaces fehler_function()
	* eval.d (progv): GC-unsafe due to using
	check_symbol_non_constant() instead of test_symbol_non_constant()
	(get_closure): use check_symbol_non_constant()
	instead of test_symbol_non_constant()
	(fehler_undefined): removed
	(coerce_function, eval1, apply, funcall): use check_fdefinition()
	instead of fehler_undefined()
	(interpret_bytecode_) [cod_symbol_function]:
	[cod_const_symbol_function, cod_const_symbol_function_push]:
	[cod_const_symbol_function_store]:
	use check_symbol() and check_fdefinition()
	instead of fehler_kein_symbol() and fehler_undefined()